--- a/src/style.css
+++ b/src/style.css
@@ -10,3 +10,16 @@
   width: 100%;
   height: 80vh;
 }
+
+/* Token markers */
+.token-marker div {
+  background-color: yellow;
+  border: 1px solid #333;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  font-weight: bold;
+}
